--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>The Wedge USA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
